ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.1.0-rc0
    • Affects Version/s: 7.1.0-rc0, 6.0.6, 5.0.18, 7.0.0-rc2
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • QE 2023-06-12, QE 2023-06-26
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The tapError method in a Future object is supposed to watch the generation of an error, but if it throws an exception during its processing, the process crashes (not always, though, maybe there are alternative code paths). The code at tapError can throw an exception if the request has an non-string $db field

            Assignee:
            Alberto Massari
            Reporter:
            Alberto Massari
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: