SERVER-77788 Avoid that tapError can throw an exception